--- a/app/views/user/pc/layouts/application.html.haml
+++ b/app/views/user/pc/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title Daizap
     = csrf_meta_tags
-    = stylesheet_link_tag    'user/application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'user/application', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag    'user/application/pc', media: 'all', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag 'user/application/pc', 'data-turbolinks-track': 'reload'
   %body
     = yield
