--- a/app/views/user/pc/user/records/new.html.haml
+++ b/app/views/user/pc/user/records/new.html.haml
@@ -1,2 +1,2 @@
 %h1 new
-= react_component('RecordBox', url: '/api/v1/records.json')
+= react_component('RecordBox', url: '/api/v1/records.json', pollInterval: 5000)
