--- a/app/views/user/pc/user/records/index.html.haml
+++ b/app/views/user/pc/user/records/index.html.haml
@@ -1,2 +1,2 @@
 %h1 index
-= react_component('RecordBox', url: '/api/v1/records.json', pollInterval: 5000)
+= react_component('RecordBox', url: '/api/v1/records/', pollInterval: 5000)
